doc updates, server and library fixes
